--- a/Android/App/app/src/main/res/layout/activity_surveys.xml
+++ b/Android/App/app/src/main/res/layout/activity_surveys.xml
@@ -2,15 +2,13 @@
 <android.support.v4.widget.DrawerLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:tools="http://schemas.android.com/tools"
-  android:id="@+id/drawer_layout"
+  android:id="@+id/drawerLayout"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  android:fitsSystemWindows="true"
-  tools:context=".surveys.surveys.SurveysActivity"
-  tools:openDrawer="start">
+  android:fitsSystemWindows="true">
 
   <LinearLayout
+    android:id="@+id/surveyListRoot"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -35,20 +33,38 @@
       <FrameLayout
         android:id="@+id/contentFrame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"/>
 
-        <android.support.design.widget.NavigationView
-          android:id="@+id/nav_view"
-          android:layout_width="wrap_content"
-          android:layout_height="match_parent"
-          android:layout_gravity="start"
-          android:fitsSystemWindows="true"
-          app:headerLayout="@layout/nav_header"
-          app:menu="@menu/drawer_actions"/>
-      </FrameLayout>
+      <LinearLayout
+        android:id="@+id/noData"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:visibility="gone"
+        android:orientation="vertical">
+
+        <TextView
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:lines="3"
+          android:text="No surveys available"
+          android:gravity="center"
+          android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
+
+        <TextView
+          android:layout_marginTop="12dp"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:gravity="center"
+          android:text="Add a survey using\nthe big pink button"
+          android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+
+      </LinearLayout>
 
       <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_add_survey"
+        android:id="@+id/fabAddSurvey"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
@@ -61,5 +77,13 @@
   </LinearLayout>
 
   <!-- Navigation Drawer -->
+  <android.support.design.widget.NavigationView
+    android:id="@+id/navView"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:layout_gravity="start"
+    android:fitsSystemWindows="true"
+    app:headerLayout="@layout/nav_header"
+    app:menu="@menu/drawer_actions"/>
 
 </android.support.v4.widget.DrawerLayout>
