--- a/Android/App/app/src/main/res/layout/fragment_personal_info.xml
+++ b/Android/App/app/src/main/res/layout/fragment_personal_info.xml
@@ -151,7 +151,7 @@
         android:layout_marginStart="4dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Territory"
+        android:text="Is the subject pregnant?"
         android:textSize="12sp"
         />
 
