--- a/Android/App/app/src/main/res/layout/photo_bottom_sheet.xml
+++ b/Android/App/app/src/main/res/layout/photo_bottom_sheet.xml
@@ -23,12 +23,12 @@
       android:layout_width="100dp"
       android:layout_height="80dp"
       android:src="@drawable/take_photo"
-      android:contentDescription="@string/take_new_photo"/>
+      android:contentDescription="@string/hint_take_new_photo"/>
     <ImageButton
       android:id="@+id/fromGallery"
       android:layout_width="100dp"
       android:layout_height="80dp"
       android:src="@drawable/insert_photo"
-      android:contentDescription="@string/select_photo"/>
+      android:contentDescription="@string/hint_select_photo"/>
   </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
