Update survey types - make them use constants for values

--- a/Android/App/app/src/main/res/xml/preferences.xml
+++ b/Android/App/app/src/main/res/xml/preferences.xml
@@ -5,7 +5,7 @@
     android:title="Primary survey"
     android:summary="Your primary survey type"
     android:entries="@array/surveyTypes"
-    android:defaultValue="Vector"
+    android:defaultValue="Mosquito"
     />
   <ListPreference
     android:key="SECONDARY_SURVEY_KEY"
