--- a/Android/App/app/src/main/res/values/survey_types.xml
+++ b/Android/App/app/src/main/res/values/survey_types.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
   <string-array name="surveyTypes">
-    <item>Human</item>
+    <item>Mosquito</item>
     <item>Patient</item>
     <item>None</item>
   </string-array>
