--- a/Android/App/app/src/main/res/values/styles.xml
+++ b/Android/App/app/src/main/res/values/styles.xml
@@ -13,6 +13,7 @@
     <item name="colorAccent">@color/colorAccent</item>
     <item name="ms_stepperStyle">@style/DotStepperStyle</item>
     <item name="android:statusBarColor">@color/colorPrimaryDark</item>
+    <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
   </style>
 
   <style name="Vector.AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
@@ -21,6 +22,7 @@
     <item name="colorPrimaryDark">@color/colorVectorPrimaryDark</item>
     <item name="colorAccent">@color/colorVectorAccent</item>
     <item name="android:statusBarColor">@color/colorVectorPrimaryDark</item>
+    <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
   </style>
 
   <style name="Toolbar" parent="ThemeOverlay.AppCompat.ActionBar">
