--- a/Android/App/app/src/main/res/xml/preferences.xml
+++ b/Android/App/app/src/main/res/xml/preferences.xml
@@ -1,29 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-  <ListPreference
-    android:key="PRIMARY_SURVEY_KEY"
-    android:title="Primary survey"
-    android:summary="Your primary survey type"
-    android:entries="@array/surveyTypes"
-    android:defaultValue="Mosquito"
-    />
-  <ListPreference
-    android:key="SECONDARY_SURVEY_KEY"
-    android:title="Secondary survey"
-    android:summary="Secondary survey type (if any)"
-    android:entries="@array/surveyTypes"
-    android:defaultValue="None"
-    />
-  <CheckBoxPreference
-    android:key="USE_CELLULAR_KEY"
-    android:title="Use cellular data"
-    android:summary="The app will use cellular data to upload surveys to the cloud."
-    android:defaultValue="true"
-    />
-  <CheckBoxPreference
-    android:key="IMAGE_RESOLUTION_KEY"
-    android:title="Optimise image resolution?"
-    android:summary="Image resolution will be optimised before uploading."
-    android:defaultValue="false"
-    />
-</PreferenceScreen>
+<android.support.v7.preference.PreferenceScreen
+  xmlns:android="http://schemas.android.com/apk/res/android">
+  <android.support.v7.preference.PreferenceCategory
+    android:title="Surveys">
+    <android.support.v7.preference.ListPreference
+      android:key="PRIMARY_SURVEY_KEY"
+      android:title="Primary survey"
+      android:summary="Your primary survey type"
+      android:entries="@array/surveyTypes"
+      android:entryValues="@array/surveyTypes"
+      android:defaultValue="Patient"
+      />
+    <android.support.v7.preference.ListPreference
+      android:key="SECONDARY_SURVEY_KEY"
+      android:title="Secondary survey"
+      android:summary="Secondary survey type (if any)"
+      android:entries="@array/surveyTypes"
+      android:entryValues="@array/surveyTypes"
+      android:defaultValue="Mosquito"
+      />
+  <android.support.v7.preference.PreferenceCategory
+    android:title="Data">
+    <android.support.v7.preference.CheckBoxPreferences
+      android:key="USE_CELLULAR_KEY"
+      android:title="Use cellular data"
+      android:summary="The app will use cellular data to upload surveys to the cloud."
+      android:defaultValue="true"
+      />
+  </android.support.v7.preference.PreferenceCategory>
+  </android.support.v7.preference.PreferenceCategory>
+  <android.support.v7.preference.PreferenceCategory
+    android:title="Photos">
+    <android.support.v7.preference.CheckBoxPreference
+      android:key="IMAGE_RESOLUTION_KEY"
+      android:title="Optimise image resolution?"
+      android:summary="Image resolution will be optimised before uploading."
+      android:defaultValue="false"
+      />
+    <!--<android.support.v7.preference.EditTextPreference-->
+      <!--android:key="IMAGE_QUALITY_KEY"-->
+      <!--android:title="Image Quality"-->
+      <!--android:summary="JPEG Compression quality to use"-->
+      <!--android:defaultValue="80"-->
+      <!--android:inputType="number"-->
+      <!--/>-->
+  </android.support.v7.preference.PreferenceCategory>
+</android.support.v7.preference.PreferenceScreen>
