--- a/Android/App/app/src/main/res/layout/content_launcher.xml
+++ b/Android/App/app/src/main/res/layout/content_launcher.xml
@@ -6,7 +6,7 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   app:layout_behavior="@string/appbar_scrolling_view_behavior"
-  tools:context=".launcher.LauncherActivity"
+  tools:context=".launcher.AppLauncher"
   tools:showIn="@layout/activity_launcher">
 
 </android.support.constraint.ConstraintLayout>
