--- a/Android/App/app/src/main/res/layout/vector_form.xml
+++ b/Android/App/app/src/main/res/layout/vector_form.xml
@@ -157,7 +157,9 @@
   <android.support.design.widget.TextInputLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/survey_field_top_margin">
+    android:layout_marginTop="@dimen/survey_field_top_margin"
+    android:visible="false"
+    >
 
     <android.support.design.widget.TextInputEditText
       android:id="@+id/vectorDna"
@@ -170,7 +172,7 @@
       android:maxLines="1"
       android:text="@string/dna_field_label"
       android:focusable="false"
-      android:clickable="true"/>
+      android:clickable="true" />
   </android.support.design.widget.TextInputLayout>
 
   <RelativeLayout
